# FFmpegLearning

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mingzz/ffmpeglearning/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cplusplus/: CMakeLists.txt
app/src/main/cplusplus/include/common/safe_queue/: SafeQueue.h
app/src/main/cplusplus/include/common/thread/: Thread.h
app/src/main/cplusplus/include/ffmpeg_learning/: AVPlayActivity.h  AudioThread.h  FFmpegLearning.h  VideoThread.h
app/src/main/cplusplus/include/ffmpeg_queue/: AVFrameQueue.h  AVPacketQueue.h
app/src/main/cplusplus/include/ffmpeg_thread/: DecodeThread.h  DemuxThread.h
app/src/main/cplusplus/include/log/: Log.h
app/src/main/cplusplus/src/common/template_impl/safe_queue/: SafeQueue.template
app/src/main/cplusplus/src/common/thread/: Thread.cpp
app/src/main/cplusplus/src/dynamic_register/: DynamicRegisterFunction.cpp
app/src/main/cplusplus/src/ffmpeg_learning/: AudioThread.cpp  VideoThread.cpp  com_mingzz_ffmpeglearning_AVPlayActivity.cpp  com_mingzz_ffmpeglearning_FFmpegLearningActivity.cpp
app/src/main/cplusplus/src/ffmpeg_queue/: AVFrameQueue.cpp  AVPacketQueue.cpp
app/src/main/cplusplus/src/ffmpeg_thread/: DecodeThread.cpp  DemuxThread.cpp
app/src/main/java/com/mingzz/ffmpeglearning/: AVPlayActivity.java  FFmpegLearningActivity.java
app/src/main/res/drawable/: video.xml
app/src/main/res/layout/: activity_main.xml  avplay_activity_layout.xml  ffmpeglearning_activity_layout.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mingzz/ffmpeglearning/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
reference/: compile.sh
